<resources>
    <string name="app_name">ToDo App</string>

    <!-- Fab action name -->

    <string name="fab_task">Task</string>
    <string name="fab_list">List</string>

    <!-- List label name -->

    <string name="inbox_label">Inbox</string>
    <string name="work_label">Work</string>
    <string name="shopping_label">Shopping</string>
    <string name="family_label">Family</string>
    <string name="personal_label">Personal</string>
    <string name="floating_menu_task">Task</string>
    <string name="floating_menu_list">List</string>
    <string name="app_bar_label">Today</string>
    <string name="list_category_name">Lists</string>
    <string name="button_log_out_main_screen">Log out</string>
    <string name="button_delete_main_screen">Delete</string>
    <string name="label_delete_button_main_screen">You are deleted notification is successful.</string>
    <string name="label_log_out_button_main_screen">You are logout is successful.</string>

    <string-array name="dummy_data" >
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
    </string-array>



    <string name="test">f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout..f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout...f your app is in full screen mode.the top most vie
        w in the layout need to implement OnTouchListener, and now we can get the motion such as swipe down, up etc ..and if when the user swi
        pe down you need to invoke actionBar.show(); which will make actionbar vi
        sible. for example if you have a toolbar at the topmost of the layout....</string>



</resources>
